--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "release": "release-it"
+    "release": "release-it",
+    "commit": "git-cz"
   },
   "keywords": [],
   "author": "",
@@ -32,6 +33,7 @@
   },
   "devDependencies": {
     "@release-it/conventional-changelog": "^5.1.1",
+    "git-cz": "^4.9.0",
     "release-it": "^15.7.0"
   }
 }
