--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "learnreleaseit",
   "version": "1.2.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "release": "release-it",
